[gd_scene load_steps=10 format=3 uid="uid://gfjq3d4ma7rx"]

[ext_resource type="PackedScene" uid="uid://crg1v38g3407v" path="res://common/ui/overlays/upgrade_overlay/weapon_upgrade_container.tscn" id="1_2vb00"]
[ext_resource type="Script" uid="uid://crb3lhqmhdjnf" path="res://common/ui/overlays/upgrade_overlay/upgrade_overlay.gd" id="1_hgugm"]
[ext_resource type="Theme" uid="uid://dxcditpyjnw8h" path="res://common/themes/theme.tres" id="2_u4mup"]
[ext_resource type="Texture2D" uid="uid://6auhdtcbkouj" path="res://common/ui/art/menu_bg.png" id="3_n735s"]
[ext_resource type="SpriteFrames" uid="uid://die4qig0721la" path="res://animations/anim_spear.tres" id="4_2vb00"]
[ext_resource type="SpriteFrames" uid="uid://dcqh25e8fyw2b" path="res://animations/anim_bow.tres" id="5_2vb00"]
[ext_resource type="Texture2D" uid="uid://dt633e5y0eqjd" path="res://common/ui/overlays/upgrade_overlay/art/ui_close_upgrade_winow_icon.png" id="5_y8xsv"]
[ext_resource type="Resource" uid="uid://bu68tojxpnmqb" path="res://resources/upgrades/player_spear_upgrade.tres" id="8_b2elt"]
[ext_resource type="Resource" uid="uid://8okgd8ohjqdj" path="res://resources/upgrades/player_bow_upgrade.tres" id="10_1ux8s"]

[node name="UpgradeOverlay" type="CanvasLayer"]
script = ExtResource("1_hgugm")

[node name="UiRoot" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_u4mup")

[node name="TextureRect" type="TextureRect" parent="UiRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_n735s")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="UiRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12549, 0.12549, 0.12549, 0.254902)

[node name="PanelContainer" type="PanelContainer" parent="UiRoot"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -354.0
offset_top = -241.0
offset_right = 354.0
offset_bottom = 241.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UiRoot/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 70
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="WeaponUpgradePanelContainer" type="HBoxContainer" parent="UiRoot/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SwordContainer" parent="UiRoot/PanelContainer/MarginContainer/WeaponUpgradePanelContainer" instance=ExtResource("1_2vb00")]
unique_name_in_owner = true
layout_mode = 2
weapon_upgrade_config = ExtResource("10_1ux8s")

[node name="SpearContainer" parent="UiRoot/PanelContainer/MarginContainer/WeaponUpgradePanelContainer" instance=ExtResource("1_2vb00")]
unique_name_in_owner = true
layout_mode = 2
sprite_frames = ExtResource("4_2vb00")
weapon_upgrade_config = ExtResource("8_b2elt")
type = 1

[node name="BowContainer" parent="UiRoot/PanelContainer/MarginContainer/WeaponUpgradePanelContainer" instance=ExtResource("1_2vb00")]
unique_name_in_owner = true
layout_mode = 2
sprite_frames = ExtResource("5_2vb00")
weapon_upgrade_config = ExtResource("10_1ux8s")
type = 2

[node name="CloseButton" type="Button" parent="UiRoot"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1382.0
offset_top = 229.0
offset_right = 1434.0
offset_bottom = 281.0
icon = ExtResource("5_y8xsv")

[connection signal="pressed" from="UiRoot/CloseButton" to="." method="_on_close_button_pressed"]
